scrolling issues on mobile, fixed

--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -2,7 +2,7 @@
 @import "../../styles/mixins";
 
 .container {
-  position: absolute;
+  position: fixed;
   z-index: 1000;
   top: 0;
   left: 0;
