--- a/components/PageSections/Home/Hero/Hero.module.scss
+++ b/components/PageSections/Home/Hero/Hero.module.scss
@@ -2,8 +2,9 @@
 @import "../../../../styles/mixins";
 
 .container {
+  position: fixed;
   width: 100%;
-  min-height: 100vh;
+  height: 100%;
   background-color: $black;
   display: grid;
   grid-template-columns: 50% 50%;
@@ -121,6 +122,7 @@
 
   @include underTablet {
     width: 150px;
+    margin-top: 30px;
   }
 
   @include underMobileSmall {
